<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".EingabeFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/button"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_marginStart="5dp"
        android:onClick="quit"
        android:text="@string/quit"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:text="@string/addu"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_marginEnd="5dp"
        android:text="@string/reset"
        android:onClick="mische"
        android:textSize="20sp" />

</FrameLayout>