<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignRight="@id/textView1"
    android:layout_marginTop="5dp"
    tools:context=".BlankFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/textviewborder"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/hello_blank_fragment"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/DOWN"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="50dp"
        android:text="@string/UP"
        android:textSize="60sp"
        android:textStyle="bold" />

</FrameLayout>